--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,13 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/iCoderbootstrap">Home <span class="sr-only">(current)</span></a>
+                </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/iCoderbootstrap/About.html">About </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/About.html">About </a>
-                </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
                         aria-expanded="false">
                         Topics
@@ -50,8 +50,8 @@
                         <a class="dropdown-item" href="#">Data Analytics</a>
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/Contact.html">Contact Us </a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/iCoderbootstrap/Contact.html">Contact Us </a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
